[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/buildings/area_51/area_51.gd" type="Script" id=1]
[ext_resource path="res://level_editor/clicable/clicable.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/buildings/area_51/ufo_explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://gameplay/buildings/area_51/area_51.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.3339, 70.7704 )

[node name="area_51" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="cooldown_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="ufo_explosion_sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -15.0
bus = "SFX"

[node name="clicable" parent="." instance=ExtResource( 2 )]
scale = Vector2( 7.5, 7.5 )
[connection signal="body_entered" from="." to="." method="_on_area_51_body_entered"]
